# bnr

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bnr-errors-and-fixes/: Cargo.toml  error_and_fix.rs  globalBnrErrorsAndFixes.json
bnr-errors-and-fixes/src/: main.rs
bnr-xfs/: Cargo.toml  README.md
bnr-xfs/src/: callback_response.rs  capabilities.rs  cash_unit.rs  counts.rs  currency.rs  denominations.rs  device_handle.rs  dispense.rs  error.rs  history.rs  intermediate_event.rs  lib.rs  macros.rs  status.rs  urb.rs  xfs.rs
bnr-xfs/src/callback_response/: intermediate.rs  operation.rs  status.rs
bnr-xfs/src/capabilities/: anti_fishing_level.rs  cdr_type.rs  default_rollback_position.rs  euro_art6_capability.rs  recognition_sensor_type.rs  reporting_mode.rs  secured_comm_level.rs  self_test_mode.rs
bnr-xfs/src/cash_unit/: count.rs  counters.rs  lock.rs  logical_cash_unit.rs  number.rs  pcu_name.rs  physical_cash_unit.rs  size.rs  status.rs  threshold.rs  unit_id.rs
bnr-xfs/src/cash_unit/counters/: counts.rs
bnr-xfs/src/cash_unit/logical_cash_unit/: list.rs
bnr-xfs/src/cash_unit/physical_cash_unit/: list.rs
bnr-xfs/src/cash_unit/threshold/: mode.rs  status.rs
bnr-xfs/src/config/: version.rs
bnr-xfs/src/currency/: cash_order.rs  cash_type.rs  code.rs  cu_enum.rs  denomination.rs  exponent.rs  mix.rs
bnr-xfs/src/denominations/: billset.rs  denomination_info.rs  denomination_list.rs
bnr-xfs/src/denominations/billset/: list.rs
bnr-xfs/src/denominations/denomination_info/: enable_denomination.rs  security_level.rs  study_version.rs
bnr-xfs/src/device_handle/: inner.rs  usb.rs
bnr-xfs/src/error/: bnr_error.rs  usb_error.rs
bnr-xfs/src/history/: bill_acceptance_history.rs  bill_dispense_history.rs  cash_type_acceptance_history.rs  cash_type_dispense_history.rs  cash_type_recycle_history.rs  counts.rs  extraction_reject_details.rs  inlet_acceptance_history.rs  insertion_reject_details.rs  loader_acceptance_history.rs  loader_slot_acceptance_history.rs  recognition_reject_details.rs  system_failure_history.rs  system_restart_history.rs  system_use_history.rs  transport_reject_details.rs
bnr-xfs/src/status/: content.rs  device.rs  dispenser.rs  hardware.rs  inter_stacker.rs  position.rs  position_capabilities.rs  position_status.rs  safe_door.rs  shutter.rs  transport.rs
bnr-xfs/src/xfs/: array.rs  fault.rs  method_call.rs  method_response.rs  operation_id.rs  params.rs  value.rs  xfs_struct.rs
bnr-xfs/tests/: capabilities.rs  status.rs
bnr-xfs/tests/e2e_tests/: cash.rs  common.rs  denominations.rs  history.rs  init.rs  maintenance.rs  mod.rs  status.rs  sys_config.rs  usb.rs
bnr-xfs/tests/xml/: capabilities.xml  position-capabilities.xml  query-cash-unit.xml  status.xml
src/: arrays.rs  capabilities.rs  cash.rs  currency.rs  denomination.rs  denominations.rs  error.rs  history.rs  init.rs  lib.rs  maintenance.rs  status.rs  sys_config.rs
src/capabilities/: anti_fishing_level.rs  cdr_type.rs  euro_art6_capability.rs  reporting_mode.rs  secured_comm_level.rs  self_test_mode.rs
src/cash/: cash_unit.rs  dispense.rs  order.rs
src/currency/: cash_type.rs  code.rs  denomination.rs
src/error/: bnr_error.rs  usb_error.rs
src/status/: content.rs  device.rs  dispenser.rs  hardware.rs  inter_stacker.rs  position.rs  safe_door.rs  shutter.rs  transport.rs
tests/e2e_tests/: cash.rs  common.rs  denominations.rs  history.rs  init.rs  maintenance.rs  mod.rs  status.rs  sys_config.rs
