[package]
name = "bnr"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rsa = "0.9"
rusb = "0.9"
serde_json = "1"
signal-hook = "0.3"

[dependencies.currency-iso4217]
version = "0.1"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bnr-sys]
path = "./bnr-sys"
version = "0.1"

[dependencies.bnr-xfs]
path = "./bnr-xfs"
version = "0.1"

[features]
e2e-tests = []
