[package]
name = "bnr"
version = "0.1.0"
edition = "2021"
authors = ["BNR Rust Developers"]
description = "Pure Rust implementation of the BNR XFS USB communication protocol"
keywords = ["usb", "bnr", "bill-acceptor", "bill-validator"]
categories = ["finance", "data-structures"]
repository = "https://github.com/bnr-rs/bnr"
license = "MIT"

[dependencies]
env_logger = "0.10"
log = "0.4"
serde_json = "1"
signal-hook = "0.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bnr-xfs]
path = "./bnr-xfs"
version = "0.1"

[dependencies.time]
version= "0.3"
package = "time"
features = ["formatting", "macros", "parsing"]

[features]
e2e-tests = []
test-reboot = []
