[package]
name = "bnr-xfs"
version = "0.1.0"
edition = "2021"

[dependencies]
xml-rs = "0.8"
rusb = "0.9"
paste = "1.0"
log = "0.4"

[dependencies.time]
version= "0.3"
package = "time"
features = ["formatting", "macros", "parsing"]

[dependencies.serde-xml-rs]
version = "0.6"
git = "https://github.com/cr8t/serde-xml-rs"
branch = "main"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
env_logger = "0.10"

[features]
e2e-tests = []
test-reboot = []
