[package]
name = "bnr-xfs"
version = "0.1.1"
edition = "2021"
authors = ["BNR Rust Developers"]
description = "Pure Rust implementation of the BNR XFS USB"
keywords = ["usb", "bnr", "bill-acceptor", "bill-validator"]
categories = ["finance", "data-structures"]
repository = "https://github.com/bnr-rs/bnr"
license = "MIT"

[dependencies]
xml-rs = "0.8"
paste = "1.0"
log = "0.4"
base64 = "0.21"

[dependencies.nusb]
version = "0.1"

[dependencies.futures-lite]
version = "2.2.0"

[dependencies.currency-iso4217]
version = "0.1"
features = ["serde"]

[dependencies.time]
version= "0.3"
package = "time"
features = ["formatting", "macros", "parsing"]

[dependencies.serde-xml]
version = "0.6"
package = "serde-xml-rust"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dev-dependencies]
env_logger = "0.10"

[features]
e2e-tests = []
test-reboot = []
